exposed card_id in customer
