# src/main/java/com/codillas/loyaltycard/controller/dto/CustomerDto.java
@@ -18,6 +18,7 @@ public class CustomerDto {
     private String email;
     private Status status;
     private Integer balance;
+    private UUID cardId;
     private Instant createdAt;
     private Instant updatedAt;
 }
